--- a/index.html
+++ b/index.html
@@ -26,26 +26,26 @@
             </div>
         </div>
 
-        <div class="row justify-content-center mt-5">
-            <div class="col-6 col-sm-4 col-md-2">
+        <div id="content"  class="row justify-content-center mt-5">
+            <div class="col-6 col-sm-4 col-md-2 mt-5 mt-sm-4 mt-md-0 ">
                 <a class="btn  btn-block">
                     <img class="img-fluid" src="img/info.png" alt="">
                     <h5 class="text-center text-right text-white">Sobre</h5>
                 </a>
             </div>
-            <div class="col-6 col-sm-4 col-md-2">
+            <div class="col-6  offset-col-sm-1 col-md-2 offset-md-1 col-md-2  mt-5 mt-sm-4 mt-md-0 ">
                 <a class="btn  btn-block">
                     <img class="img-fluid" src="img/tools.png" alt="">
                     <h5 class="text-center text-right text-white">Projetos</h5>
                 </a>
             </div>
-            <div class="col-6 col-sm-4 col-md-2">
+            <div class="col-6  offset-col-sm-1 col-sm-4  offset-md-1 col-md-2  mt-5 mt-sm-4 mt-md-0 ">
                 <a class="btn  btn-block">
                     <img class="img-fluid" src="img/clerk-with-tie.png" alt="">
                     <h5 class="text-center text-right text-white">Quem somos</h5>
                 </a>
             </div>
-            <div class="col-6 col-sm-4 col-md-2">
+            <div class="col-6  offset-col-sm-1 col-sm-4  offset-md-1 col-md-2  mt-5 mt-sm-4 mt-md-0 ">
                 <a class="btn  btn-block">
                     <img class="img-fluid" src="img/call.png" alt="">
                     <h5 class="text-center text-right text-white">Contatos</h5>
