--- a/index.html
+++ b/index.html
@@ -28,25 +28,25 @@
 
         <div id="content"  class="row justify-content-center mt-5">
             <div class="col-6 col-sm-4 col-md-2 mt-5 mt-sm-4 mt-md-0 ">
-                <a class="btn  btn-block">
+                <a href="sobre.html">
                     <img class="img-fluid" src="img/info.png" alt="">
                     <h5 class="text-center text-right text-white">Sobre</h5>
                 </a>
             </div>
             <div class="col-6  offset-col-sm-1 col-md-2 offset-md-1 col-md-2  mt-5 mt-sm-4 mt-md-0 ">
-                <a class="btn  btn-block">
+                <a href="projetos.html">
                     <img class="img-fluid" src="img/tools.png" alt="">
                     <h5 class="text-center text-right text-white">Projetos</h5>
                 </a>
             </div>
             <div class="col-6  offset-col-sm-1 col-sm-4  offset-md-1 col-md-2  mt-5 mt-sm-4 mt-md-0 ">
-                <a class="btn  btn-block">
+                <a href="clientes.html">
                     <img class="img-fluid" src="img/clerk-with-tie.png" alt="">
-                    <h5 class="text-center text-right text-white">Quem somos</h5>
+                    <h5 class="text-center text-right text-white">Clientess</h5>
                 </a>
             </div>
             <div class="col-6  offset-col-sm-1 col-sm-4  offset-md-1 col-md-2  mt-5 mt-sm-4 mt-md-0 ">
-                <a class="btn  btn-block">
+                <a href="contatos.html">
                     <img class="img-fluid" src="img/call.png" alt="">
                     <h5 class="text-center text-right text-white">Contatos</h5>
                 </a>
@@ -66,10 +66,30 @@
 
  </div>
 
+    <!-- Janela Modal -->
 
+    <div class="modal fade" id="modal-info" role="dialog" aria-labelledby="information" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title">Título da nossa Modal</h5>
+              <button type="button" class="close" data-dismiss="modal" aria-label="Fechar">
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+            <div class="modal-body">
+              <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nisi quidem asperiores ipsa neque tenetur libero facere, corporis et magni pariatur dignissimos obcaecati voluptate consequuntur ipsam provident dolor odio doloribus quaerat.</p>
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-dismiss="modal">Fechar</button>
+            </div>
+          </div>
+        </div>
+      </div>
 
     <script src="js/jquery-3.6.0.min.js"></script>
     <script src="js/bootstrap.js"></script>
     <script src="librarys/fontawesome/js/all.js"></script>
+    <script src="js/load-page.js"></script>
 </body>
 </html>
