--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -56,9 +56,11 @@
         <div class="container-fluid border-top fixed-bottom">
             <div class="row">
                 <div class="col-12">
+                    <div class="bg-rodape">
                     <p class="text-white text-center">
                         Todos os direitos reservados. <br> Rennan Guilherme Dos Santos lima
                     </p>
+                </div>
                 </div>
             </div>
         </div>
