--- a/index.html
+++ b/index.html
@@ -28,25 +28,25 @@
 
         <div id="content"  class="row justify-content-center mt-5">
             <div class="col-6 col-sm-4 col-md-2 mt-5 mt-sm-4 mt-md-0 ">
-                <a href="sobre.html">
+                <a href="sobre">
                     <img class="img-fluid" src="img/info.png" alt="">
                     <h5 class="text-center text-right text-white">Sobre</h5>
                 </a>
             </div>
             <div class="col-6  offset-col-sm-1 col-md-2 offset-md-1 col-md-2  mt-5 mt-sm-4 mt-md-0 ">
-                <a href="projetos.html">
+                <a href="projetos">
                     <img class="img-fluid" src="img/tools.png" alt="">
                     <h5 class="text-center text-right text-white">Projetos</h5>
                 </a>
             </div>
             <div class="col-6  offset-col-sm-1 col-sm-4  offset-md-1 col-md-2  mt-5 mt-sm-4 mt-md-0 ">
-                <a href="clientes.html">
+                <a href="clientes">
                     <img class="img-fluid" src="img/clerk-with-tie.png" alt="">
                     <h5 class="text-center text-right text-white">Clientess</h5>
                 </a>
             </div>
             <div class="col-6  offset-col-sm-1 col-sm-4  offset-md-1 col-md-2  mt-5 mt-sm-4 mt-md-0 ">
-                <a href="contatos.html">
+                <a href="contatos">
                     <img class="img-fluid" src="img/call.png" alt="">
                     <h5 class="text-center text-right text-white">Contatos</h5>
                 </a>
