--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <div class="col-6  offset-col-sm-1 col-sm-4  offset-md-1 col-md-2  mt-5 mt-sm-4 mt-md-0 ">
                 <a href="clientes">
                     <img class="img-fluid" src="img/clerk-with-tie.png" alt="">
-                    <h5 class="text-center text-right text-white">Clientess</h5>
+                    <h5 class="text-center text-right text-white">Clientes</h5>
                 </a>
             </div>
             <div class="col-6  offset-col-sm-1 col-sm-4  offset-md-1 col-md-2  mt-5 mt-sm-4 mt-md-0 ">
@@ -90,6 +90,6 @@
     <script src="js/jquery-3.6.0.min.js"></script>
     <script src="js/bootstrap.js"></script>
     <script src="librarys/fontawesome/js/all.js"></script>
-    <script src="js/load-page.js"></script>
+    <script src="js/load-page.js"></script> 
 </body>
 </html>
