--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/bootstrap.css">
-    <link rel="stylesheet" href="librarys/fontawesome/css/all.css">
     <link rel="stylesheet" href="portfolio.css">
     <title>Document</title>
 </head>
@@ -16,11 +15,11 @@
                 <img class="img-fluid" src="img/eclipse.png" alt="">
             </div>
             <div class="col-9 col-sm-10 col-md-11">
-                <h1 class="text-right text-white mt-3 personal-family d-none d-sm-block">
+                <h1 class="text-right  mt-3 personal-family d-none d-sm-block">
                     Rennan Guilherme - Desenvolvedor Web
                 </h1>
 
-                <h4 class="text-right text-white mt-3 personal-family d-block d-sm-none d-md-none">
+                <h4 class="text-right  mt-3 personal-family d-block d-sm-none d-md-none">
                     Rennan Guilherme 
                 </h4>
             </div>
@@ -30,33 +29,42 @@
             <div class="col-6 col-sm-4 col-md-2 mt-5 mt-sm-4 mt-md-0 ">
                 <a href="sobre">
                     <img class="img-fluid" src="img/info.png" alt="">
-                    <h5 class="text-center text-right text-white">Sobre</h5>
+                    <h5 class="text-center text-right ">Sobre</h5>
                 </a>
             </div>
             <div class="col-6  offset-col-sm-1 col-md-2 offset-md-1 col-md-2  mt-5 mt-sm-4 mt-md-0 ">
                 <a href="projetos">
                     <img class="img-fluid" src="img/tools.png" alt="">
-                    <h5 class="text-center text-right text-white">Projetos</h5>
+                    <h5 class="text-center text-right ">Projetos</h5>
                 </a>
             </div>
             <div class="col-6  offset-col-sm-1 col-sm-4  offset-md-1 col-md-2  mt-5 mt-sm-4 mt-md-0 ">
                 <a href="clientes">
                     <img class="img-fluid" src="img/clerk-with-tie.png" alt="">
-                    <h5 class="text-center text-right text-white">Clientes</h5>
+                    <h5 class="text-center text-right ">Clientes</h5>
                 </a>
             </div>
             <div class="col-6  offset-col-sm-1 col-sm-4  offset-md-1 col-md-2  mt-5 mt-sm-4 mt-md-0 ">
                 <a href="contatos">
                     <img class="img-fluid" src="img/call.png" alt="">
-                    <h5 class="text-center text-right text-white">Contatos</h5>
+                    <h5 class="text-center text-right ">Contatos</h5>
                 </a>
             </div>
+
+              <div class="row">
+            <div class="col-12 text-center">
+            <button class="btn btn-primary">ORIGINAL</button>
+              <button class="btn btn-light">LIGHT</button>
+              <button class="btn btn-dark">DARK</button>
+            </div>
+            </div>
+
             </div>
         </div>
         <div class="container-fluid border-top fixed-bottom">
             <div class="row">
                 <div class="col-12">
-                    <p class="text-white text-center">
+                    <p class="text-center">
                         Todos os direitos reservados. <br> Rennan Guilherme Dos Santos lima
                     </p>
                 </div>
@@ -89,7 +97,7 @@
 
     <script src="js/jquery-3.6.0.min.js"></script>
     <script src="js/bootstrap.js"></script>
-    <script src="librarys/fontawesome/js/all.js"></script>
     <script src="js/load-page.js"></script> 
+    <script src="js/tema.js"></script> 
 </body>
 </html>
