--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             </div>
 
               <div class="row">
-            <div class="col-12 text-center">
+            <div class="col-12 text-center" id="alinhamento">
             <button class="btn btn-primary">ORIGINAL</button>
               <button class="btn btn-light">LIGHT</button>
               <button class="btn btn-dark">DARK</button>
