--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="portfolio.css">
+    <link rel="manifest" href="manifest.json">
+	  <link rel="favicon" href="img/pwa72x72.png">
     <title>Document</title>
 </head>
 <body>
@@ -99,5 +101,6 @@
     <script src="js/bootstrap.js"></script>
     <script src="js/load-page.js"></script> 
     <script src="js/tema.js"></script> 
+    <script src="js/script.js"></script> 
 </body>
 </html>
