--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="portfolio.css">
     <link rel="manifest" href="manifest.json">
-	  <link rel="favicon" href="img/pwa72x72.png">
+	  <link rel="favicon" href="pwa/eclipse72.png">
     <title>Document</title>
 </head>
 <body>
